# Hidden-Markov-Model

./: HMM.cabal
app/: Main.hs
src/: HiddenMarkov.hs
